--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  Arti Logisticts
+  <% include ../partials/header.ejs %>
 </head>
 
 <body>
+
 <div class="jumbotron text-center">
   <h1>Arti Logisticts is Comming Soon</h1>
 </div>
+
+
 </body>
 </html>
