--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <% include ../partials/header.ejs %>
+    <% include ../partials/header.ejs %>
 </head>
 
 <body>
 
-<div class="jumbotron text-center">
-  <h1>Arti Logisticts is Comming Soon</h1>
-</div>
+    <div class="jumbotron text-center">
+        <h1>Arti Logisticts is Comming Soon</h1>
+        <h2>Contacts</h2>
+        <h3>Email Address: arti.logistics.ltd@gmail.com</h3>
+        <h3>Phone: 0895 477 825</h3>
+    </div>
 
 
 </body>
+
 </html>
