--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -64,7 +64,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Arti Logistics</h2>
-                <p>Arti Logistics is logistic company. Our company is a young one; we are young and strive to develop, to make progress and we are ambitious enough to succeed in our endeavors, as all young people do.</p>
+                <p>Arti Logistics is logistic company. Our company is a young one, we are young and strive to develop, to make progress and we are ambitious enough to succeed in our endeavors, as all young people do.</p>
             </div>
         </div>
     </section>
@@ -87,18 +87,19 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Arti Logistics</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <p>Feel free to email or call us to provide you with the best suggestions and solutions for your needs!</p>
+                <p><a href="mailto:arti.logistics.ltd@gmail.com">arti.logistics.ltd@gmail.com</a>
+                    <p>Phone: 0895 477 825</p>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
                         <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="https://github.com/YovkoGospodinov/ArtiLogistics" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                        <a href="https://plus.google.com/u/0/111555753641443060208" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
                     </li>
                 </ul>
             </div>
