--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -90,14 +90,15 @@
                 <p>Feel free to email or call us to provide you with the best suggestions and solutions for your needs!</p>
                 <p><a href="mailto:arti.logistics.ltd@gmail.com">arti.logistics.ltd@gmail.com</a>
                     <p>Phone: 0895 477 825</p>
+                    <p>Phone: ‎0876 076 015</p>
                 </p>
                 <ul class="list-inline banner-social-buttons">
-                    <li>
+                    <!-- <li>
                         <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
                     <li>
                         <a href="https://github.com/YovkoGospodinov/ArtiLogistics" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
+                    </li> -->
                     <li>
                         <a href="https://plus.google.com/u/0/114751744327009316590" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
                     </li>
