add fav icon and mail changes

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,7 +15,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Arti</span> Logistics
+                    <i class="fa fa-play-circle"></i> <span class="light">Arti Logistics</span>
                 </a>
             </div>
 
@@ -88,7 +88,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Arti Logistics</h2>
                 <p>Feel free to email or call us to provide you with the best suggestions and solutions for your needs!</p>
-                <p><a href="mailto:arti.logistics.ltd@gmail.com">arti.logistics.ltd@gmail.com</a>
+                <p><a href="mailto:d.gospodinov@artilogistics.bg">D.gospodinov@artilogistics.bg</a>
                     <p>Phone: 0895 477 825</p>
                     <p>Phone: ‎0876 076 015</p>
                 </p>
@@ -110,7 +110,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Arti.Logistics.com 2017</p>
+            <p>Copyright &copy; Arti Logistics LTD 2017</p>
         </div>
     </footer>
 
