--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,7 +15,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Arti Logistics</span>
+                    <i><img id="logo" src="/theme/img/logo.png"></i> <span class="light">Arti Logistics</span>
                 </a>
             </div>
 
