edit text in about section

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -64,7 +64,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Arti Logistics</h2>
-                <p>Arti Logistics is logistic company. Our company is a young one, we are young and strive to develop, to make progress and we are ambitious enough to succeed in our endeavors, as all young people do.</p>
+                <p>Arti Logistics is ambitious logistic company. Our company is a young one, we are young and strive to develop, to make progress and we are ambitious enough to succeed in our endeavors, as all young people do.</p>
             </div>
         </div>
     </section>
