adding bg language

--- a/views/pages/index_bg.ejs
+++ b/views/pages/index_bg.ejs
@@ -15,7 +15,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i><img id="logo" src="/theme/img/logo.png"></i> <span class="light">Arti Logistics</span>
+                    <i><img id="logo" src="/theme/img/logo.png"></i> <span class="light">Арти Логистикс</span>
                 </a>
             </div>
 
@@ -27,13 +27,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">За Нас</a>
                     </li>
                     <!-- <li>
                         <a class="page-scroll" href="#download">Download</a>
                     </li>  -->
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Контакти</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/">ENG</a>
                     </li>
                 </ul>
             </div>
@@ -48,8 +51,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Arti Logistics</h1>
-                        <p class="intro-text">We do it successfully</p>
+                        <h1 class="brand-heading">Арти Логистикс</h1>
+                        <p class="intro-text">Успяваме Заедно</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -63,8 +66,8 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Arti Logistics</h2>
-                <p>Arti Logistics is ambitious logistic company. Our company is a young one, we are young and strive to develop, to make progress and we are ambitious enough to succeed in our endeavors, as all young people do.</p>
+                <h2>За Нас Арти Логистикс</h2>
+                <p>Арти Логистикс е млада и изключително амбициозна компания в сферата на логистиката. Ние сме млади, а на младостта са присъщи желанието за развитие, стремежът към прогрес, амбицията за успех.</p>
             </div>
         </div>
     </section>
@@ -86,8 +89,8 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Arti Logistics</h2>
-                <p>Feel free to email or call us to provide you with the best suggestions and solutions for your needs!</p>
+                <h2>Връзка с Арти Логистикс</h2>
+                <p>За да се свържете с нас, моля изпратете e-mail или се свържете с нас на посочените телефони!</p>
                 <p><a href="mailto:d.gospodinov@artilogistics.bg">D.gospodinov@artilogistics.bg</a>
                     <p>Phone: 0895 477 825</p>
                     <p>Phone: ‎0876 076 015</p>
@@ -110,7 +113,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Arti Logistics LTD 2017</p>
+            <p>Запазени права &copy; Арти Логистикс ЕООД 2017</p>
         </div>
     </footer>
 
