set bg as default language

--- a/views/pages/index_bg.ejs
+++ b/views/pages/index_bg.ejs
@@ -36,7 +36,7 @@
                         <a class="page-scroll" href="#contact">Контакти</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/">ENG</a>
+                        <a class="page-scroll" href="/eng">ENG</a>
                     </li>
                 </ul>
             </div>
@@ -67,7 +67,9 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>За Нас Арти Логистикс</h2>
-                <p>Арти Логистикс е млада и изключително амбициозна компания в сферата на логистиката. Ние сме млади, а на младостта са присъщи желанието за развитие, стремежът към прогрес, амбицията за успех.</p>
+                <p>Арти логистикс ЕООД, занимаваща се с логистика и транспорт, e готова да отговори на всичките Ви изисквания за бърз, качествен и безпроблемен транспорт. Основен предмет на дейност са спедиторски услуги по въздух и море, както и автомобилен
+                    превоз на товари. Разполагаме със собствен автопарк от 7 прицепа покриващи групажни и комплектни товари по внос и износ към Европа, както и само в рамките на страната.
+                </p>
             </div>
         </div>
     </section>
@@ -91,21 +93,22 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Връзка с Арти Логистикс</h2>
                 <p>За да се свържете с нас, моля изпратете e-mail или се свържете с нас на посочените телефони!</p>
-                <p><a href="mailto:d.gospodinov@artilogistics.bg">D.gospodinov@artilogistics.bg</a>
+                <p><a href="mailto:d.gospodinov@artilogistics.bg">D.Gospodinov@artilogistics.bg</a>
                     <p>Phone: 0895 477 825</p>
-                    <p>Phone: ‎0876 076 015</p>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <!-- <li>
+                    <p><a href="mailto:g.dimova@artilogistics.bg">G.Dimova@artilogistics.bg</a>
+                        <p>Phone: ‎0876 076 015</p>
+                    </p>
+                    <ul class="list-inline banner-social-buttons">
+                        <!-- <li>
                         <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
                     <li>
                         <a href="https://github.com/YovkoGospodinov/ArtiLogistics" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li> -->
-                    <li>
-                        <a href="https://plus.google.com/u/0/114751744327009316590" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
+                        <li>
+                            <a href="https://plus.google.com/u/0/114751744327009316590" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                        </li>
+                    </ul>
             </div>
         </div>
     </section>
