--- a/views/pages/index_eng.ejs
+++ b/views/pages/index_eng.ejs
@@ -36,7 +36,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="bg">BG</a>
+                        <a class="page-scroll" href="/">BG</a>
                     </li>
                 </ul>
             </div>
@@ -93,19 +93,20 @@
                 <p>Feel free to email or call us to provide you with the best suggestions and solutions for your needs!</p>
                 <p><a href="mailto:d.gospodinov@artilogistics.bg">D.gospodinov@artilogistics.bg</a>
                     <p>Phone: 0895 477 825</p>
-                    <p>Phone: ‎0876 076 015</p>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <!-- <li>
+                    <p><a href="mailto:g.dimova@artilogistics.bg">G.Dimova@artilogistics.bg</a>
+                        <p>Phone: ‎0876 076 015</p>
+                    </p>
+                    <ul class="list-inline banner-social-buttons">
+                        <!-- <li>
                         <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
                     <li>
                         <a href="https://github.com/YovkoGospodinov/ArtiLogistics" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li> -->
-                    <li>
-                        <a href="https://plus.google.com/u/0/114751744327009316590" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
+                        <li>
+                            <a href="https://plus.google.com/u/0/114751744327009316590" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                        </li>
+                    </ul>
             </div>
         </div>
     </section>
