change about text

--- a/views/pages/index_bg.ejs
+++ b/views/pages/index_bg.ejs
@@ -67,8 +67,8 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>За Нас Арти Логистикс</h2>
-                <p>Арти логистикс ЕООД, занимаваща се с логистика и транспорт, e готова да отговори на всичките Ви изисквания за бърз, качествен и безпроблемен транспорт. Основен предмет на дейност са спедиторски услуги по въздух и море, както и автомобилен
-                    превоз на товари. Разполагаме със собствен автопарк от 7 прицепа покриващи групажни и комплектни товари по внос и износ към Европа, както и само в рамките на страната.
+                <p>Арти логистикс ЕООД, занимаваща се с логистика и транспорт, e готова да отговори на всичките Ви изисквания за бърз, качествен и безпроблемен транспорт. Основен предмет на дейност е автомобилния превоз на товари, както и спедиторски услуги
+                    по въздух и море. Разполагаме със собствен автопарк, покриващ групажни и комплектни товари по внос и износ към Европа, както и само в рамките на страната.
                 </p>
             </div>
         </div>
