edit english about text

--- a/views/pages/index_eng.ejs
+++ b/views/pages/index_eng.ejs
@@ -68,7 +68,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Arti Logistics</h2>
                 <p>Arti Logistics Ltd. is a company that specializes in the logistics and transportation field, which will readily respond to all your needs regarding a fast, quality assured and care free transportation of your goods. Our main activity is
-                    transporting goods by land and we can also provide freight forwarding services by air and sea. We have our own fleet of motor vehicles, which cover grooved and complex cargo for import and export from Europe.</p>
+                    transporting goods by land and we can also provide freight forwarding services by air and sea. We have our own fleet of motor vehicles, which cover full truck or groupage loadings for import and export from Europe.</p>
             </div>
         </div>
     </section>
