edit phone numbers

--- a/views/pages/index_bg.ejs
+++ b/views/pages/index_bg.ejs
@@ -94,9 +94,9 @@
                 <h2>Връзка с Арти Логистикс</h2>
                 <p>За да се свържете с нас, моля изпратете e-mail или се свържете с нас на посочените телефони!</p>
                 <p><a href="mailto:d.gospodinov@artilogistics.bg">D.Gospodinov@artilogistics.bg</a>
-                    <p>Phone: 0895 477 825</p>
+                    <p>Phone: ‎+359 895 477 825</p>
                     <p><a href="mailto:g.dimova@artilogistics.bg">G.Dimova@artilogistics.bg</a>
-                        <p>Phone: ‎0876 076 015</p>
+                        <p>Phone: ‎+359 876 076 015</p>
                     </p>
                     <ul class="list-inline banner-social-buttons">
                         <!-- <li>
