--- a/views/pages/index_eng.ejs
+++ b/views/pages/index_eng.ejs
@@ -93,9 +93,9 @@
                 <h2>Contact Arti Logistics</h2>
                 <p>Feel free to email or call us to provide you with the best suggestions and solutions for your needs!</p>
                 <p><a href="mailto:d.gospodinov@artilogistics.bg">D.gospodinov@artilogistics.bg</a>
-                    <p>Phone: 0895 477 825</p>
+                    <p>Phone: +359 895 477 825</p>
                     <p><a href="mailto:g.dimova@artilogistics.bg">G.Dimova@artilogistics.bg</a>
-                        <p>Phone: ‎0876 076 015</p>
+                        <p>Phone: ‎+359 876 076 015</p>
                     </p>
                     <ul class="list-inline banner-social-buttons">
                         <!-- <li>
