add lang flags for lang changing

--- a/views/pages/index_bg.ejs
+++ b/views/pages/index_bg.ejs
@@ -36,7 +36,7 @@
                         <a class="page-scroll" href="#contact">Контакти</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/eng">ENG</a>
+                        <a class="language-flag" href="/eng"><img id="eng-flag" src="/theme/img/eng-flag.png"></a>
                     </li>
                 </ul>
             </div>
