--- a/views/pages/index_eng.ejs
+++ b/views/pages/index_eng.ejs
@@ -36,7 +36,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/">BG</a>
+                        <a class="language-flag" href="/"><img id="bg-flag" src="/theme/img/bg-flag.png"></a>
                     </li>
                 </ul>
             </div>
