adding contacts in route

--- a/views/pages/contacts_bg.ejs
+++ b/views/pages/contacts_bg.ejs
@@ -10,7 +10,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+            <a class="navbar-brand js-scroll-trigger" href="/">
                 <i><img id="logo" src="/img/logo.png"></i> <span class="light">Арти Логистикс</span>
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,80 +20,69 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#">Начало</a>
+                        <a class="nav-link js-scroll-trigger" href="/">Начало</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="">Услуги</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#about">За Нас</a>
+                        <a class="nav-link js-scroll-trigger" href="/#about">За Нас</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/contacts-bg">Контакти</a>
+                        <a class="nav-link js-scroll-trigger" href="#">Контакти</a>
                     </li>
                     <li>
-                        <a class="language-flag" href="/en"><img id="en-flag" src="/img/en-flag.png"></a>
+                        <a class="language-flag" href="/contacts-en"><img id="en-flag" src="/img/en-flag.png"></a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Intro Header -->
-    <header class="masthead">
-        <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <h1 class="brand-heading">Арти Логистикс</h1>
-                        <p class="intro-text">Успяваме Заедно</p>
-                        <a href="#about" class="btn btn-circle js-scroll-trigger">
-                            <i class="fa fa-angle-double-down animated"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
 
-    <!-- About Section -->
-    <section id="about" class="content-section text-center">
+
+    <!-- Contact Section -->
+    <section id="contact" class="content-section text-center">
         <div class="container">
+            <div class="col-lg-8 mx-auto">
+                <h2>Връзка с Арти Логистикс ЕООД</h2>
+                <p>За да се свържете с нас, моля изпратете e-mail или се свържете с нас на посочените телефони!</p>
+            </div>
             <div class="row">
-                <div class="col-lg-8 mx-auto">
-                    <h2>За Нас Арти Логистикс</h2>
-                    <p>Арти Логистикс ЕООД, занимаваща се с логистика и транспорт, e готова да отговори на всичките Ви изисквания за бърз, качествен и безпроблемен транспорт. Основен предмет на дейност е автомобилния превоз на товари, както и спедиторски
-                        услуги по въздух и море. Разполагаме със собствен автопарк, покриващ групажни и комплектни товари по внос и износ към Европа, както и само в рамките на страната.
-                    </p>
+                <div class="col-md-6 col-lg-4">
+                    <span class="contact-item d-block mx-auto">
+                            <span>Д. Господинов</span>
+                    <p>Мениджър Спедиция</p>
+                    <a href="mailto:d.gospodinov@artilogistics.bg">D.Gospodinov@artilogistics.bg</a>
+                    <p>Phone: ‎+359 895 477 825</p>
+                    </span>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <span class="contact-item d-block mx-auto">
+                            <span>Г. Димова</span>
+                    <p>Спедитор</p>
+                    <a href="mailto:g.dimova@artilogistics.bg">G.Dimova@artilogistics.bg</a>
+                    <p>Phone: ‎+359 876 076 015</p>
+                    </span>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <span class="contact-item d-block mx-auto">
+                                <span>Офис</span>
+                    <p><br></p>
+                    <a href="mailto:office@artilogistics.bg">office@artilogistics.bg</a>
+                    <p>гр. Бургас, ул. Цар Петър 14, офис 14</p>
+                    </span>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-lg-4">
-                    <span class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
-                            <img class="img-fluid" src="img/portfolio01.png" alt="">
-                            <h5 class="portfolio-grid-label text-center">Автомобилен транспорт</h5>
-                            <span>Сухопътен транспорт от и до Европа на цели и групажни товари</span>
-                    </span>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <span class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
-                            <img class="img-fluid" src="img/portfolio02.jpg" alt="">
-                            <h5 class="portfolio-grid-label text-center">Спедиторски услуги</h5>
-                            <span>Организиране на морски и въздушен транспорт до всяка точка на света</span>
-                    </span>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <span class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
-                            <img class="img-fluid" src="img/portfolio03.png" alt="">
-                            <h5 class="portfolio-grid-label text-center">Куриерски услуги</h5>
-                            <span>Експресни куриерски доставки на теририята на град София със срок доставка до 90 минути</span>
-                    </span>
-                </div>
+            <div class="row contacts-web" style="justify-content:center">
+                <a target="_blank" href="https://www.facebook.com/Arti-Logistics-100923340690221/" class="btn btn-default btn-lg"><i class="fa fa-fw fa-facebook"></i> <span class="network-name">Facebook</span></a>
+                <a target="_blank" href="https://plus.google.com/u/0/114751744327009316590" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
             </div>
         </div>
     </section>
+
+    <!-- Map Section -->
+    <div id="map"></div>
 
     <!-- Footer -->
     <footer class="footer text-center">
@@ -140,8 +129,14 @@
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
+    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCp62lF7k9gx9VZqplkBADrt7cHuqZtpPA&sensor=false"></script>
+
     <!-- Custom scripts for this template -->
     <script src="js/grayscale.min.js"></script>
+
+    <!-- Custom scripts for google maps -->
+    <script src="js/maps.js"></script>
 
 </body>
 
