--- a/views/pages/contacts_en.ejs
+++ b/views/pages/contacts_en.ejs
@@ -10,7 +10,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+            <a class="navbar-brand js-scroll-trigger" href="/en">
                 <i><img id="logo" src="/img/logo.png"></i> <span class="light">Arti Logistics</span>
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,81 +20,67 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#">Home</a>
+                        <a class="nav-link js-scroll-trigger" href="/en">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                        <a class="nav-link js-scroll-trigger" href="/en#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/contacts-en">Contact</a>
+                        <a class="nav-link js-scroll-trigger" href="#">Contact</a>
                     </li>
                     <li>
-                        <a class="language-flag" href="/"><img id="en-flag" src="/img/bg-flag.png"></a>
+                        <a class="language-flag" href="/contacts-bg"><img id="en-flag" src="/img/bg-flag.png"></a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-
-    <!-- Intro Header -->
-    <header class="masthead">
-        <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <h1 class="brand-heading">Arti Logistics</h1>
-                        <p class="intro-text">We do it successfully!</p>
-                        <a href="#about" class="btn btn-circle js-scroll-trigger">
-                            <i class="fa fa-angle-double-down animated"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <!-- About Section -->
-    <section id="about" class="content-section text-center">
+    <!-- Contact Section -->
+    <section id="contact" class="content-section text-center">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-8 mx-auto">
-                    <h2>About Arti Logistics</h2>
-                    <p>Arti Logistics Ltd is a company that specializes in the logistics and transportation field, which will readily respond to all your needs regarding a fast, quality assured and care free transportation of your goods. Our main activity
-                        is transporting goods by land and we can also provide freight forwarding services by air and sea. We have our own fleet of motor vehicles, which cover full truck or groupage loadings for import and export from Europe.
-                    </p>
-                </div>
+            <div class="col-lg-8 mx-auto">
+                <h2>Contact Arti Logistics</h2>
+                <p>Feel free to email or call us to provide you with the best suggestions and solutions for your needs!</p>
             </div>
-        </div>
-        <div class="container">
             <div class="row">
                 <div class="col-md-6 col-lg-4">
-                    <span class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
-                                <img class="img-fluid" src="img/portfolio01.png" alt="">
-                                <h5 class="portfolio-grid-label text-center">Road transport</h5>
-                                <span>Full loads, part loads and groupage shipments all over the Europe</span>
+                    <span class="contact-item d-block mx-auto">
+                                <span>D. Gospodinov</span>
+                    <p>Forwarding manager</p>
+                    <a href="mailto:d.gospodinov@artilogistics.bg">D.Gospodinov@artilogistics.bg</a>
+                    <p>Phone: ‎+359 895 477 825</p>
                     </span>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <span class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
-                                <img class="img-fluid" src="img/portfolio02.jpg" alt="">
-                                <h5 class="portfolio-grid-label text-center">Freight Forwarding services</h5>
-                                <span>Sea and air freight all over the World</span>
+                    <span class="contact-item d-block mx-auto">
+                                <span>G. Dimova</span>
+                    <p>Freight Forwarding Officer</p>
+                    <a href="mailto:g.dimova@artilogistics.bg">G.Dimova@artilogistics.bg</a>
+                    <p>Phone: ‎+359 876 076 015</p>
                     </span>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <span class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
-                                <img class="img-fluid" src="img/portfolio03.png" alt="">
-                                <h5 class="portfolio-grid-label text-center">Courier services</h5>
-                                <span>We can offer you express and professional courier services into Sofia within 90 minutes</span>
+                    <span class="contact-item d-block mx-auto">
+                                    <span>Office</span>
+                    <p><br></p>
+                    <a href="mailto:office@artilogistics.bg">office@artilogistics.bg</a>
+                    <p>Burgas, ul. Tsar Peter 14, office 14</p>
                     </span>
                 </div>
+            </div>
+            <div class="row contacts-web" style="justify-content:center">
+                <a target="_blank" href="https://www.facebook.com/Arti-Logistics-100923340690221/" class="btn btn-default btn-lg"><i class="fa fa-fw fa-facebook"></i> <span class="network-name">Facebook</span></a>
+                <a target="_blank" href="https://plus.google.com/u/0/114751744327009316590" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
             </div>
         </div>
     </section>
+
+    <!-- Map Section -->
+    <div id="map"></div>
 
     <!-- Footer -->
     <footer class="footer text-center">
@@ -141,8 +127,14 @@
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
+    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCp62lF7k9gx9VZqplkBADrt7cHuqZtpPA&sensor=false"></script>
+
     <!-- Custom scripts for this template -->
     <script src="js/grayscale.min.js"></script>
+
+    <!-- Custom scripts for google maps -->
+    <script src="js/maps.js"></script>
 
 </body>
 
