add services_bg route

--- a/views/pages/index_en.ejs
+++ b/views/pages/index_en.ejs
@@ -87,7 +87,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <span class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
-                                <img class="img-fluid" src="img/portfolio03.png" alt="">
+                                <img class="img-fluid" src="img/portfolio03.jpg" alt="">
                                 <h5 class="portfolio-grid-label text-center">Courier services</h5>
                                 <span>We can offer you express and professional courier services into Sofia within 90 minutes</span>
                     </span>
