--- a/views/pages/services_bg.ejs
+++ b/views/pages/services_bg.ejs
@@ -10,7 +10,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+            <a class="navbar-brand js-scroll-trigger" href="/">
                 <i><img id="logo" src="/img/logo.png"></i> <span class="light">Арти Логистикс</span>
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,51 +20,34 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#">Начало</a>
+                        <a class="nav-link js-scroll-trigger" href="/">Начало</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/services-bg">Услуги</a>
+                        <a class="nav-link js-scroll-trigger" href="">Услуги</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#about">За Нас</a>
+                        <a class="nav-link js-scroll-trigger" href="/#about">За Нас</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/contacts-bg">Контакти</a>
+                        <a class="nav-link js-scroll-trigger" href="#">Контакти</a>
                     </li>
                     <li>
-                        <a class="language-flag" href="/en"><img id="en-flag" src="/img/en-flag.png"></a>
+                        <a class="language-flag" href="/contacts-en"><img id="en-flag" src="/img/en-flag.png"></a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Intro Header -->
-    <header class="masthead">
-        <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <h1 class="brand-heading">Арти Логистикс</h1>
-                        <p class="intro-text">Успяваме Заедно</p>
-                        <a href="#about" class="btn btn-circle js-scroll-trigger">
-                            <i class="fa fa-angle-double-down animated"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
 
-    <!-- About Section -->
+
+    <!-- Services Section -->
     <section id="about" class="content-section text-center">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h2>За Нас Арти Логистикс</h2>
-                    <p>Арти Логистикс ЕООД, занимаваща се с логистика и транспорт, e готова да отговори на всичките Ви изисквания за бърз, качествен и безпроблемен транспорт. Основен предмет на дейност е автомобилния превоз на товари, както и спедиторски
-                        услуги по въздух и море. Разполагаме със собствен автопарк, покриващ групажни и комплектни товари по внос и износ към Европа, както и само в рамките на страната.
-                    </p>
+                    <h2>Нашите услуги</h2>
+                    <p>Градски куриер</p>
                 </div>
             </div>
         </div>
@@ -72,24 +55,26 @@
             <div class="row">
                 <div class="col-md-6 col-lg-4">
                     <span class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
-                            <img class="img-fluid" src="img/portfolio01.png" alt="">
-                            <h5 class="portfolio-grid-label text-center">Автомобилен транспорт</h5>
-                            <span>Сухопътен транспорт от и до Европа на цели и групажни товари</span>
+                                <h5 class="portfolio-grid-label text-center">Градски куриер</h5>
                     </span>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <span class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
-                            <img class="img-fluid" src="img/portfolio02.jpg" alt="">
-                            <h5 class="portfolio-grid-label text-center">Спедиторски услуги</h5>
-                            <span>Организиране на морски и въздушен транспорт до всяка точка на света</span>
+                                <h5 class="portfolio-grid-label text-center">Спедиторски услуги</h5>
                     </span>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <span class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
-                            <img class="img-fluid" src="img/portfolio03.jpg" alt="">
-                            <h5 class="portfolio-grid-label text-center">Куриерски услуги</h5>
-                            <span>Експресни куриерски доставки на теририята на град София със срок доставка до 90 минути</span>
+                                <h5 class="portfolio-grid-label text-center">Автомобилен транспорт</h5>
                     </span>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="main-content">
+                <div class="col-lg-8 mx-auto">
+                    <h2>Услуга</h2>
+                    <p>Цена</p>
                 </div>
             </div>
         </div>
