fix fav icon path

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,7 @@
 
 <!-- Bootstrap core CSS -->
 <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<link rel="shortcut icon" type="image/png" href="/theme/img/fav.png" />
+<link rel="shortcut icon" type="image/png" href="/img/fav.png" />
 
 <!-- Custom fonts for this template -->
 <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
