style buttons in services bg route and new images

--- a/views/pages/services_bg.ejs
+++ b/views/pages/services_bg.ejs
@@ -46,36 +46,34 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h2>Нашите услуги</h2>
-                    <p>Градски куриер</p>
+                    <h3>Нашите услуги</h3>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-lg-4">
-                    <span class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
-                                <h5 class="portfolio-grid-label text-center">Градски куриер</h5>
-                    </span>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <span class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
-                                <h5 class="portfolio-grid-label text-center">Спедиторски услуги</h5>
-                    </span>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <span class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
-                                <h5 class="portfolio-grid-label text-center">Автомобилен транспорт</h5>
-                    </span>
-                </div>
+                <a class="btn btn-outline-secondary col-md-6 col-lg-4" href="#">Градски куриер</a>
+                <a class="btn btn-outline-secondary col-md-6 col-lg-4" href="#">Спедиторски услуги</a>
+                <a class="btn btn-outline-secondary col-md-6 col-lg-4" href="#">Автомобилен транспорт</a>
             </div>
         </div>
-        <div class="container">
-            <div class="main-content">
-                <div class="col-lg-8 mx-auto">
-                    <h2>Услуга</h2>
-                    <p>Цена</p>
-                </div>
+        <div class="container" id="courier">
+            <p class="lead">Градски куриер</p>
+            <div class="row">
+                <div class="col-md-8">Име</div>
+                <div class="col-md-4">Цена</div>
+            </div>
+            <div class="row">
+                <div class="col-md-8">90 минути</div>
+                <div class="col-md-4">5.00лв.</div>
+            </div>
+            <div class="row">
+                <div class="col-md-8">120 минути</div>
+                <div class="col-md-4">4.00лв.</div>
+            </div>
+            <div class="row">
+                <div class="col-md-8">150 минути</div>
+                <div class="col-md-4">3.00лв.</div>
             </div>
         </div>
     </section>
